=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Fixed: [ 2028403 ] Age display glitch (fisharebest)
 - Fixed: [ 2034084 ] 3609 Find Family errors (fisharebest)
 - Added: [ 1923217 ] Google Translate API Addition to Language Tools (wooc)
 - Changed: Removed Portuguese (Brazil) language; replaced with Portuguese, using pt-br language files (canajun2eh)
 - Changed: Don't pollute log file with logs of known good spiders (canajun2eh)
 - Changed: Don't show lists until filter criteria have been entered (canajun2eh)
 - Fixed: [ 2022036 ] Translation tool adds backslashes input text 
 - Fixed: [ 2020014 ] Weird indexing for surnames with some diacritics (canajun2eh)
 - Fixed: Album page errors due to import_request_variables() call being removed (windmillway)
 - Added theme based template for portal blocks (yalnifj)
 - Added theme based template for person box (yalnifj)
 - Added Tree tab to individual page (yalnifj)
 - Added Event class (yalnifj, neumont)
 - Added new NavTree chart (yalnifj)
 - Added [ 1675203 ] Geo-Names ajax address autocomplete (opus27)
 - Fixed: [ 2011427 ] [SVN 3475] lightbox : undefined function: htmlspecialchars, with PHP ver. less than PHP 5.0.1 (windmillway)
 - Fixed: [ 2012084 ] config page chokes on change list (fisharebest)
 - Fixed: [ 2002003 ] [SVN 3385] Place : toggle_lati_long is not defined (wooc)
 - Changed: Album Page: added get_first_letters() function in functions_name.php to correctly create a truncated TITLE dropdown link for RTL and LTR (windmillway)
 - Fixed: Album Page: Corrected wrong appearance of View Source drop down menu item when not authorized. Lightbox added to source.php page (windmillway)
 - Fixed: [ 2002885 ] Place of DEAT, assumed? (fisharebest)